--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>Hello World</nav>
+    <nav>
+        <div>
+            <H1>Hello World</H1>
+        </div>
+    </nav>
 </body>
 </html>
