Added nav flexbox

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
+    <nav class="container-flex">
         <div>
-            <H1>Hello World</H1>
+            <h1>Hello World</h1>
         </div>
+        <span id="nav-click">
+            <a href="#">About</a>
+            <a href="#">Projects</a>
+        </span>
     </nav>
 </body>
 </html>
