replace nav div with ul + added header(empty)

--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 </head>
 <body>
     <nav class="container-flex">
-        <div>
+        <div class="flex-items">
             <h1>Hello World</h1>
         </div>
-        <span id="nav-click">
-            <a href="#">About</a>
-            <a href="#">Projects</a>
-        </span>
+        <div>
+            <ul class="flex-items nav-button">
+                <li><a href="#"></a>About</li>
+                <li><a href="#"></a>Projects</li>
+            </ul>
+        </div>
     </nav>
+    <header class="header-nice"></header>
 </body>
 </html>
