added some things

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!----------Nav bar-------------->
     <nav class="container-flex">
         <div class="flex-items">
             <h1>Hello World</h1>
         </div>
-        <div>
-            <ul class="flex-items nav-button">
-                <li><a href="#"></a>About</li>
-                <li><a href="#"></a>Projects</li>
-            </ul>
-        </div>
+        <ul class="flex-items nav-button">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Projects</a></li>
+        </ul>
     </nav>
-    <header class="header-nice"></header>
+    <!---Header-->
+    <header class="header-nice"><img id="hero-img" src="/images/mountainsky.jpg" alt="header-image"></header>
 </body>
 </html>
