Change Nav bar/Header completely

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
         <div class="flex-items">
             <h1>Hello World</h1>
         </div>
-        <ul class="flex-items nav-button">
+        <ul class="nav-button">
             <li><a href="#">About</a></li>
             <li><a href="#">Projects</a></li>
         </ul>
     </nav>
-    <!---Header-->
-    <header class="header-nice"><img id="hero-img" src="/images/mountainsky.jpg" alt="header-image"></header>
+    <!--------Header-------->
+    <div class="header-container">
+        <h1>Portfolio Web</h1>
+    </div>
 </body>
 </html>
