added list style + header text and about me section

--- a/index.html
+++ b/index.html
@@ -11,16 +11,25 @@
     <!----------Nav bar-------------->
     <nav class="container-flex">
         <div class="flex-items">
-            <h1>Hello World</h1>
+            <h1>Rijkenz</h1>
         </div>
         <ul class="nav-button">
-            <li><a href="#">About</a></li>
+            <li><a href="#">About Me</a></li>
             <li><a href="#">Projects</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
     <!--------Header-------->
     <div class="header-container">
         <h1>Portfolio Web</h1>
+    </div>
+    <div class="about-me-header-main">
+        <div class="about-me-image">
+            <img src="/images/jazzman.jpeg" alt="jazzman">
+        </div>
+        <div class="about-me-text">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores nobis ducimus hic fugit odio alias quas a, saepe sint modi ad repudiandae quia, earum sunt distinctio tempore optio facilis debitis.</p>
+        </div>
     </div>
 </body>
 </html>
