Change about-me-header and added section-cards

--- a/index.html
+++ b/index.html
@@ -23,13 +23,29 @@
     <div class="header-container">
         <h1>Portfolio Web</h1>
     </div>
+
     <div class="about-me-header-main">
+            <img class="about-me-image" src="/images/jazzman.jpeg" alt="jazzman">
+            <p>Hello My name is Mike Rijkens and i am a freelance webdeveloper. i will help you make beautiful and responsive website for you.</p>
+    </div>
+
+    <!------- OLD AboutMe HEADER 
+        <div class="about-me-header-main">
         <div class="about-me-image">
             <img src="/images/jazzman.jpeg" alt="jazzman">
         </div>
         <div class="about-me-text">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores nobis ducimus hic fugit odio alias quas a, saepe sint modi ad repudiandae quia, earum sunt distinctio tempore optio facilis debitis.</p>
+            <p>Hello My name is Mike Rijkens and i am a freelance webdeveloper. i will help you make beautiful and responsive website for you.</p>
         </div>
     </div>
+        --------------------->
+
+    <div class="section-card">
+        <div class="card">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ut nihil, et rerum quibusdam voluptas nostrum dicta possimus, enim neque reiciendis? Iure, expedita aut quidem iste provident ratione rem? Distinctio.</div>
+        <div class="card">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ut nihil, et rerum quibusdam voluptas nostrum dicta possimus, enim neque reiciendis? Iure, expedita aut quidem iste provident ratione rem? Distinctio.</div>
+        <div class="card">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ut nihil, et rerum quibusdam voluptas nostrum dicta possimus, enim neque reiciendis? Iure, expedita aut quidem iste provident ratione rem? Distinctio.</div>
+        <div class="card">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ut nihil, et rerum quibusdam voluptas nostrum dicta possimus, enim neque reiciendis? Iure, expedita aut quidem iste provident ratione rem? Distinctio.</div>
+    </div>        
+
 </body>
 </html>
