--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
             <p>Hello My name is Mike Rijkens and i am a freelance webdeveloper. i will help you make beautiful and responsive website for you.</p>
         </div>
     </div>
-        --------------------->
+    --------------------->
 
     <div class="section-card">
         <div class="card">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ut nihil, et rerum quibusdam voluptas nostrum dicta possimus, enim neque reiciendis? Iure, expedita aut quidem iste provident ratione rem? Distinctio.</div>
         <div class="card">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ut nihil, et rerum quibusdam voluptas nostrum dicta possimus, enim neque reiciendis? Iure, expedita aut quidem iste provident ratione rem? Distinctio.</div>
         <div class="card">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ut nihil, et rerum quibusdam voluptas nostrum dicta possimus, enim neque reiciendis? Iure, expedita aut quidem iste provident ratione rem? Distinctio.</div>
         <div class="card">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ut nihil, et rerum quibusdam voluptas nostrum dicta possimus, enim neque reiciendis? Iure, expedita aut quidem iste provident ratione rem? Distinctio.</div>
-    </div>        
-
+    <div>
+        <div class="footer"></div>
 </body>
 </html>
