Added footer/ Subscribe Card

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="about-me-header-main">
             <img class="about-me-image" src="/images/jazzman.jpeg" alt="jazzman">
-            <p>Hello My name is Mike Rijkens and i am a freelance webdeveloper. i will help you make beautiful and responsive website for you.</p>
+            <p>Hello my name is Mike Rijkens and i am a freelance webdeveloper. i will help you make beautiful and responsive website for you.</p>
     </div>
 
     <!------- OLD AboutMe HEADER 
@@ -40,12 +40,22 @@
     </div>
     --------------------->
 
+    <!---------Section Cards-->
     <div class="section-card">
         <div class="card">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ut nihil, et rerum quibusdam voluptas nostrum dicta possimus, enim neque reiciendis? Iure, expedita aut quidem iste provident ratione rem? Distinctio.</div>
         <div class="card">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ut nihil, et rerum quibusdam voluptas nostrum dicta possimus, enim neque reiciendis? Iure, expedita aut quidem iste provident ratione rem? Distinctio.</div>
         <div class="card">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ut nihil, et rerum quibusdam voluptas nostrum dicta possimus, enim neque reiciendis? Iure, expedita aut quidem iste provident ratione rem? Distinctio.</div>
         <div class="card">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo ut nihil, et rerum quibusdam voluptas nostrum dicta possimus, enim neque reiciendis? Iure, expedita aut quidem iste provident ratione rem? Distinctio.</div>
-    <div>
-        <div class="footer"></div>
+
+    </div>
+    <!-----Subscribe-------->
+    <div class="subscribe-container">
+        <div id="sub-card">
+            <p>Dont hesitate to choose the right side.</p>
+            <button type="button" id="Button">Click</button>
+        </div>
+    </div>
+
+    <div class="footer"><p>@Rijkenz</p></div>
 </body>
 </html>
